# ValvaeLibre

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  jekyll.yml
docs/: index.html  index.md
docs/slides/sem2/phase3/: index.html
src/: EngineESIM.cpp  VCP.cpp  cam_shaft_info.html  camcard_info_v2.html  engineSim.cpp  engine_interface.cpp  i2c.cpp  input_from_gpio_sample.cpp  json_to_header.py  lcd_constants.h  lcd_interface.h  picoEsim.cpp  program1.cpp  program2.cpp  program3.cpp  run_both_programs.cpp  sampleautotest.cpp  table.h  table.json
src/Testing/: SendTest.cpp
src/css/: beautiful_UI.css  cam_shaft_info.css  camcard_info_v2.css
src/html/: beautiful_UI.html  camshaft.html  reluctor_ring.html
src/js/: .gitignore  beautiful_UI.js  cam_shaft_info.js  camcard_info_v2.js  camshaft.js  camshaft_autotest.js
src/json/: cam_card.json  table.json  table_new.json  toneWheel.json
src/lib/: LiquidCrystal_I2C.h:Zone.Identifier
src/scripts/: json_to_header.py  table.json
